# Towards-Soft-Error-Resilience-in-SWE-with-Teampi

./: .clang-format  .gitignore  .gitmodules  .swe-slurm.conf.swp  CMakeLists.txt  README  README.md  runSDCAnalysis.sh  runTests.sh  swe-slurm.conf
scripts/: 2_60_log.txt  SWE.28047.i23r04c04s11.out  SWE.32940.i22r02c04s05.out  SWE.33164.i22r03c03s02.out  SWE.33189.i22r01c04s04.out  abnormal_log.txt  checkpoint_test.sh  cr_fail_test.sh  extractSDC_correctionRate.py  extractSDC_outcomeRate.py  interval_test.sh  ncfloatcmp.py  slurm_start.sh  slurm_start_cr.sh  teaMPI_16_procs_no_fail.txt  teaMPI_log.txt  teaMPI_log_backup.txt  teaMPI_log_cr.txt  teaMPI_multi_node.sh  teaMPI_single_node.sh  teaMPI_test.sh
src/: constants.hpp  main.cpp  main_noshare.cpp  swe_alex.cpp  swe_checkpointRestart.cpp  swe_softRes_and_hardRes_woutTaskSharing.cpp
src/blocks/: Block.hpp  CMakeLists.txt  DimSplitMPIOverdecomp.cpp  DimSplitMPIOverdecomp.hpp  SWE_Block.cpp  SWE_Block.hh
src/examples/: swe_mpi.cpp  swe_simple.cpp
src/io/: CMakeLists.txt  NetCDFWriter.cpp  NetCDFWriter.hpp  Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
src/reader/: CMakeLists.txt  Reader.cpp  Reader.hh
src/scenarios/: CMakeLists.txt  LoadNetCDFScenario.cpp  LoadNetCDFScenario.hpp  SWE_LoadNetCdfScenario.cpp  SWE_LoadNetCdfScenario.hh  SWE_Scenario.hh  Scenario.hpp  simple_scenarios.hpp
src/solvers/: CMakeLists.txt  HLLEFun.hpp
src/tolerance/: swe_checkpointRestart.cpp  swe_hardRes_wTaskSharing.cpp  swe_noRes.cpp  swe_softRes.cpp  swe_softRes_admiss_redundant.cpp  swe_softRes_admiss_useShared.cpp  swe_softRes_admiss_useShared_v1.cpp  swe_softRes_admiss_useShared_v2.cpp  swe_softRes_admiss_useShared_v2_NONBLOCKING.cpp  swe_softRes_and_hardRes_wTaskSharing.cpp  swe_softRes_and_hardRes_woutTaskSharing.cpp  swe_softRes_hardRes_hashes.cpp  swe_softRes_hashes.cpp  swe_tests.cpp
src/tolerance/tests/: bitflip_injection_tests.cpp  bitflip_injection_tests.hpp
src/tools/: Args.hpp  CMakeLists.txt  Logger.hh  Reports.cpp  Reports.hpp  args.hh  ftLogger.cpp  ftLogger.hpp  hasher.cpp  hasher.hpp  help.hh  help.hpp  sha1.hpp
src/types/: Boundary.hpp  CMakeLists.txt  Float2D.hpp  Float2DBuffer.hpp  Float2DNative.hpp
src/writer/: CMakeLists.txt  NetCdfWriter.cpp  NetCdfWriter.hh  Writer.cpp  Writer.hh
